--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hammerjs": "^2.0.8",
     "material-components-web": "^1.0.1",
     "material-design-icons": "^3.0.1",
+    "ngx-webstorage-service": "^4.0.1",
     "popper": "^1.0.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
